package render;

public class MapData {
    public static final int[][] gameMap =
            {{1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1},
                    {1, 1, 1, 1, 1, 1, 2, 2, 2, 1, 1, 1, 1, 1, 1},
                    {1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 3, 1, 4, 1, 1},
                    {1, 1, 1, 3, 1, 1, 0, 0, 0, 1, 1, 1, 1, 6, 1},
                    {1, 1, 1, 1, 1, 1, 0, 9, 0, 1, 5, 1, 1, 1, 1},
                    {1, 1, 3, 1, 1, 1, 0, 0, 0, 1, 1, 1, 4, 1, 1},
                    {1, 1, 1, 5, 1, 1, 1, 1, 1, 1, 1, 1, 1, 6, 1},
                    {1, 1, 4, 1, 1, 1, 3, 1, 1, 1, 1, 1, 1, 1, 1},
                    {1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1}};
    public static final int[][] testMap1 =
            {
                    {0,0,0,0,0,0,0,0},
                    {1,0,9,0,0,0,0,1},
                    {0,0,0,0,0,0,0,0},
            };
    public static final int[][] WalkingStoneMapTest=
            {
                    {0,0,0,0,0,0,0,0},
                    {0,0,9,0,6,0,0,0},
                    {0,0,0,0,0,0,0,0},
            };
}
